runtime/modules/dashboard/metricengine/src/com/tibco/cep/metric/condition/ast/filterParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 /home/bala/be/5.3/runtime/modules/dashboard/metricengine/src/com/tibco/cep/metric/condition/grammar/filter.g 2016-03-24 11:19:17

	package com.tibco.cep.metric.condition.ast;
      

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

public class filterParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "TOK_SELECTOR", "OR_EXPRESSION", "AND_EXPRESSION", "PARENTHESES_EXPRESSION", "RANGE_EXPRESSION", "BIND_VARIABLE_EXPRESSION", "IDENTIFIER", "PROPERTY", "UNARY_MINUS", "TOK_NOTLIKE", "TOK_NOR", "TOK_NOTIN", "TOK_NOTBETWEEN", "TOK_ISNOT", "TOK_RPAREN", "TOK_LPAREN", "TOK_COMMA", "TOK_DOT", "TOK_COLON", "TOK_CONCAT", "TOK_EQ", "TOK_PLUS", "TOK_MINUS", "TOK_SLASH", "TOK_STAR", "TOK_LE", "TOK_GE", "TOK_NE", "TOK_LT", "TOK_GT", "TOK_DOLLAR", "TOK_HASH", "TOK_AT", "TOK_IN", "TOK_OR", "TOK_AND", "TOK_LIKE", "TOK_BETWEEN", "TOK_MOD", "TOK_ABS", "TOK_NOT", "TOK_NULL", "TOK_TRUE", "TOK_FALSE", "TOK_DOUBLE", "TOK_IS", "HexDigit", "NameFirstCharacter", "NameCharacter", "OctalEscape", "UnicodeEscape", "EscapeSequence", "IntegerTypeSuffix", "Exponent", "FloatTypeSuffix", "HexLiteral", "DIGIT_ZERO", "DIGIT_OCTAL_RANGE", "DIGIT_DECIMAL_RANGE", "DIGIT_FULL_RANGE", "OCTALDIGIT", "DIGIT", "DIGITS", "DecimalLiteral", "OctalLiteral", "SUBDATE", "SUBTIME", "SUBTIMEMILLIS", "GMT", "DateLiteral", "TimeLiteral", "DateTimeLiteral", "StringLiteral", "TOK_APPROXIMATE_NUMERIC_LITERAL", "TOK_EXACT_NUMERIC_LITERAL", "Identifier", "WS", "NewLine", "CommentLine", "SLComment", "MultiLineComment"
    };
    public static final int TOK_OR=38;
    public static final int TOK_PLUS=25;
    public static final int TOK_NOT=44;
    public static final int RANGE_EXPRESSION=8;
    public static final int DateLiteral=73;
    public static final int TOK_NOR=14;
    public static final int BIND_VARIABLE_EXPRESSION=9;
    public static final int TOK_DOLLAR=34;
    public static final int TOK_LIKE=40;
    public static final int AND_EXPRESSION=6;
    public static final int TOK_GT=33;
    public static final int TOK_AND=39;
    public static final int Identifier=79;
    public static final int OctalLiteral=68;
    public static final int CommentLine=82;
    public static final int SUBTIME=70;
    public static final int TOK_APPROXIMATE_NUMERIC_LITERAL=77;
    public static final int TOK_GE=30;
    public static final int SLComment=83;
    public static final int TOK_LT=32;
    public static final int NewLine=81;
    public static final int PROPERTY=11;
    public static final int TOK_NOTBETWEEN=16;
    public static final int TOK_COLON=22;
    public static final int SUBTIMEMILLIS=71;
    public static final int HexDigit=50;
    public static final int GMT=72;
    public static final int TOK_COMMA=20;
    public static final int TOK_NOTLIKE=13;
    public static final int StringLiteral=76;
    public static final int TOK_NOTIN=15;
    public static final int TOK_SLASH=27;
    public static final int OCTALDIGIT=64;
    public static final int TOK_LE=29;
    public static final int OctalEscape=53;
    public static final int TOK_DOT=21;
    public static final int SUBDATE=69;
    public static final int TimeLiteral=74;
    public static final int DIGIT_ZERO=60;
    public static final int Exponent=57;
    public static final int TOK_IN=37;
    public static final int TOK_EQ=24;
    public static final int NameFirstCharacter=51;
    public static final int DIGIT_FULL_RANGE=63;
    public static final int DIGITS=66;
    public static final int TOK_EXACT_NUMERIC_LITERAL=78;
    public static final int TOK_IS=49;
    public static final int TOK_STAR=28;
    public static final int TOK_FALSE=47;
    public static final int TOK_RPAREN=18;
    public static final int IntegerTypeSuffix=56;
    public static final int TOK_ISNOT=17;
    public static final int TOK_LPAREN=19;
    public static final int DecimalLiteral=67;
    public static final int FloatTypeSuffix=58;
    public static final int IDENTIFIER=10;
    public static final int UnicodeEscape=54;
    public static final int WS=80;
    public static final int EOF=-1;
    public static final int TOK_MINUS=26;
    public static final int TOK_ABS=43;
    public static final int MultiLineComment=84;
    public static final int EscapeSequence=55;
    public static final int DIGIT_OCTAL_RANGE=61;
    public static final int TOK_DOUBLE=48;
    public static final int TOK_BETWEEN=41;
    public static final int OR_EXPRESSION=5;
    public static final int DIGIT=65;
    public static final int PARENTHESES_EXPRESSION=7;
    public static final int DIGIT_DECIMAL_RANGE=62;
    public static final int TOK_AT=36;
    public static final int TOK_TRUE=46;
    public static final int TOK_CONCAT=23;
    public static final int TOK_MOD=42;
    public static final int TOK_NE=31;
    public static final int UNARY_MINUS=12;
    public static final int DateTimeLiteral=75;
    public static final int HexLiteral=59;
    public static final int TOK_HASH=35;
    public static final int TOK_SELECTOR=4;
    public static final int NameCharacter=52;
    public static final int TOK_NULL=45;

    // delegates
    // delegators


        public filterParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public filterParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
            this.state.ruleMemo = new HashMap[91+1];
             
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return filterParser.tokenNames; }
    public String getGrammarFileName() { return "/home/bala/be/5.3/runtime/modules/dashboard/metricengine/src/com/tibco/cep/metric/condition/grammar/filter.g"; }


            protected void mismatch(IntStream input, int ttype, BitSet follow)  throws RecognitionException
            {
                throw new MismatchedTokenException(ttype, input);
            }

            public Object recoverFromMismatchedSet(IntStream input, RecognitionException e, BitSet follow) throws RecognitionException {
                 System.out.println(e.getMessage());
                 throw e;
            }

          

    public static class selector_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "selector"
    // /home/bala/be/5.3/runtime/modules/dashboard/metricengine/src/com/tibco/cep/metric/condition/grammar/filter.g:279:1: selector : return_or= orExpr EOF -> ^( TOK_SELECTOR $return_or) ;
    public final filterParser.selector_return selector() throws RecognitionException {
        filterParser.selector_return retval = new filterParser.selector_return();
        retval.start = input.LT(1);
        int selector_StartIndex = input.index();
        Object root_0 = null;

        Token EOF1=null;
        filterParser.orExpr_return return_or = null;


        Object EOF1_tree=null;
        RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
        RewriteRuleSubtreeStream stream_orExpr=new RewriteRuleSubtreeStream(adaptor,"rule orExpr");
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 1) ) { return retval; }
            // /home/bala/be/5.3/runtime/modules/dashboard/metricengine/src/com/tibco/cep/metric/condition/grammar/filter.g:280:5: (return_or= orExpr EOF -> ^( TOK_SELECTOR $return_or) )
            // /home/bala/be/5.3/runtime/modules/dashboard/metricengine/src/com/tibco/cep/metric/condition/grammar/filter.g:280:9: return_or= orExpr EOF
            {
            pushFollow(FOLLOW_orExpr_in_selector3525);
            return_or=orExpr();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_orExpr.add(return_or.getTree());
            EOF1=(Token)match(input,EOF,FOLLOW_EOF_in_selector3527); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_EOF.add(EOF1);



            // AST REWRITE
            // elements: return_or
            // token labels: 
            // rule labels: return_or, retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_return_or=new RewriteRuleSubtreeStream(adaptor,"rule return_or",return_or!=null?return_or.tree:null);
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 280:32: -> ^( TOK_SELECTOR $return_or)
            {
                // /home/bala/be/5.3/runtime/modules/dashboard/metricengine/src/com/tibco/cep/metric/condition/grammar/filter.g:280:35: ^( TOK_SELECTOR $return_or)
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(TOK_SELECTOR, "TOK_SELECTOR"), root_1);

                adaptor.addChild(root_1, stream_return_or.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

                    catch (RecognitionException rece) {
                        throw rece;
                    }
                    finally {
            if ( state.backtracking>0 ) { memoize(input, 1, selector_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "selector"

    public static class orExpr_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "orExpr"
    // /home/bala/be/5.3/runtime/modules/dashboard/metricengine/src/com/tibco/cep/metric/condition/grammar/filter.g:284:1: orExpr : ( andExpr -> andExpr ) (lc= TOK_OR a= andExpr -> ^( $lc $orExpr $a) )* ;
    public final filterParser.orExpr_return orExpr() throws RecognitionException {
        filterParser.orExpr_return retval = new filterParser.orExpr_return();
        retval.start = input.LT(1);
        int orExpr_StartIndex = input.index();
        Object root_0 = null;

        Token lc=null;
        filterParser.andExpr_return a = null;

        filterParser.andExpr_return andExpr2 = null;


        Object lc_tree=null;
        RewriteRuleTokenStream stream_TOK_OR=new RewriteRuleTokenStream(adaptor,"token TOK_OR");
        RewriteRuleSubtreeStream stream_andExpr=new RewriteRuleSubtreeStream(adaptor,"rule andExpr");
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 2) ) { return retval; }
            // /home/bala/be/5.3/runtime/modules/dashboard/metricengine/src/com/tibco/cep/metric/condition/grammar/filter.g:284:8: ( ( andExpr -> andExpr ) (lc= TOK_OR a= andExpr -> ^( $lc $orExpr $a) )* )
            // /home/bala/be/5.3/runtime/modules/dashboard/metricengine/src/com/tibco/cep/metric/condition/grammar/filter.g:285:15: ( andExpr -> andExpr ) (lc= TOK_OR a= andExpr -> ^( $lc $orExpr $a) )*
            {
            // /home/bala/be/5.3/runtime/modules/dashboard/metricengine/src/com/tibco/cep/metric/condition/grammar/filter.g:285:15: ( andExpr -> andExpr )
            // /home/bala/be/5.3/runtime/modules/dashboard/metricengine/src/com/tibco/cep/metric/condition/grammar/filter.g:285:17: andExpr
            {
            pushFollow(FOLLOW_andExpr_in_orExpr3575);
            andExpr2=andExpr();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_andExpr.add(andExpr2.getTree());


            // AST REWRITE
            // elements: andExpr
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 285:25: -> andExpr
            {
                adaptor.addChild(root_0, stream_andExpr.nextTree());

            }

            retval.tree = root_0;}
            }

            // /home/bala/be/5.3/runtime/modules/dashboard/metricengine/src/com/tibco/cep/metric/condition/grammar/filter.g:286:15: (lc= TOK_OR a= andExpr -> ^( $lc $orExpr $a) )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==TOK_OR) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /home/bala/be/5.3/runtime/modules/dashboard/metricengine/src/com/tibco/cep/metric/condition/grammar/filter.g:287:19: lc= TOK_OR a= andExpr
            	    {
            	    lc=(Token)match(input,TOK_OR,FOLLOW_TOK_OR_in_orExpr3619); if (state.failed) return retval; 
            	    if ( state.backtracking==0 ) stream_TOK_OR.add(lc);

            	    pushFollow(FOLLOW_andExpr_in_orExpr3641);
            	    a=andExpr();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_andExpr.add(a.getTree());


            	    // AST REWRITE
            	    // elements: lc, orExpr, a
            	    // token labels: lc
            	    // rule labels: a, retval
            	    // token list labels: 
            	    // rule list labels: 
            	    // wildcard labels: 
            	    if ( state.backtracking==0 ) {
            	    retval.tree = root_0;
            	    RewriteRuleTokenStream stream_lc=new RewriteRuleTokenStream(adaptor,"token lc",lc);
            	    RewriteRuleSubtreeStream stream_a=new RewriteRuleSubtreeStream(adaptor,"rule a",a!=null?a.tree:null);
            	    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            	    root_0 = (Object)adaptor.nil();
            	    // 288:29: -> ^( $lc $orExpr $a)
            	    {
            	        // /home/bala/be/5.3/runtime/modules/dashboard/metricengine/src/com/tibco/cep/metric/condition/grammar/filter.g:288:32: ^( $lc $orExpr $a)
            	        {
            	        Object root_1 = (Object)adaptor.nil();
            	        root_1 = (Object)adaptor.becomeRoot(stream_lc.nextNode(), root_1);

            	        adaptor.addChild(root_1, stream_retval.nextTree());
            	        adaptor.addChild(root_1, stream_a.nextTree());

            	        adaptor.addChild(root_0, root_1);
            	        }

            	    }

            	    retval.tree = root_0;}
            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

                    catch (RecognitionException rece) {
                        throw rece;
                    }
                    finally {
            if ( state.backtracking>0 ) { memoize(input, 2, orExpr_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "orExpr"

    public static class andExpr_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "andExpr"
    // /home/bala/be/5.3/runtime/modules/dashboard/metricengine/src/com/tibco/cep/metric/condition/grammar/filter.g:292:1: andExpr : ( ( equalityExpr -> equalityExpr ) (lc= TOK_AND a= equalityExpr -> ^( $lc $andExpr $a) )* ) ;
    public final filterParser.andExpr_return andExpr() throws RecognitionException {
        filterParser.andExpr_return retval = new filterParser.andExpr_return();
        retval.start = input.LT(1);
        int andExpr_StartIndex = input.index();
        Object root_0 = null;

        Token lc=null;
        filterParser.equalityExpr_return a = null;

        filterParser.equalityExpr_return equalityExpr3 = null;


        Object lc_tree=null;
        RewriteRuleTokenStream stream_TOK_AND=new RewriteRuleTokenStream(adaptor,"token TOK_AND");
        RewriteRuleSubtreeStream stream_equalityExpr=new RewriteRuleSubtreeStream(adaptor,"rule equalityExpr");
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 3) ) { return retval; }
            // /home/bala/be/5.3/runtime/modules/dashboard/metricengine/src/com/tibco/cep/metric/condition/grammar/filter.g:292:9: ( ( ( equalityExpr -> equalityExpr ) (lc= TOK_AND a= equalityExpr -> ^( $lc $andExpr $a) )* ) )
            // /home/bala/be/5.3/runtime/modules/dashboard/metricengine/src/com/tibco/cep/metric/condition/grammar/filter.g:293:8: ( ( equalityExpr -> equalityExpr ) (lc= TOK_AND a= equalityExpr -> ^( $lc $andExpr $a) )* )
            {
            // /home/bala/be/5.3/runtime/modules/dashboard/metricengine/src/com/tibco/cep/metric/condition/grammar/filter.g:293:8: ( ( equalityExpr -> equalityExpr ) (lc= TOK_AND a= equalityExpr -> ^( $lc $andExpr $a) )* )
            // /home/bala/be/5.3/runtime/modules/dashboard/metricengine/src/com/tibco/cep/metric/condition/grammar/filter.g:294:15: ( equalityExpr -> equalityExpr ) (lc= TOK_AND a= equalityExpr -> ^( $lc $andExpr $a) )*
            {
            // /home/bala/be/5.3/runtime/modules/dashboard/metricengine/src/com/tibco/cep/metric/condition/grammar/filter.g:294:15: ( equalityExpr -> equalityExpr )
            // /home/bala/be/5.3/runtime/modules/dashboard/metricengine/src/com/tibco/cep/metric/condition/grammar/filter.g:294:17: equalityExpr
            {
            pushFollow(FOLLOW_equalityExpr_in_andExpr3720);
            equalityExpr3=equalityExpr();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_equalityExpr.add(equalityExpr3.getTree());

